--- a/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
@@ -66,7 +66,9 @@ else
                                     </td>
                                     <td>@TotalReserve</td>
                                     <td>@TotalInterested</td>
-                                    <td><!--Html.ActionLink("Details", "SignupDetails", "Signups", new {area = "admin", id = signup.ID}, new {class="btn btn-default"}) Html.ActionLink("Edit", "Edit", "Signups", new { area = "admin", id = signup.ID }, new { class = "btn btn-default" })--></td>
+                                    <td><!--Html.ActionLink("Details", "SignupDetails", "Signups", new {area = "admin", id = signup.ID}, new {class="btn btn-default"}) Html.ActionLink("Edit", "Edit", "Signups", new { area = "admin", id = signup.ID }, new { class = "btn btn-default" })-->
+                                         @Html.ActionLink("Edit", "EditSignup", "Signups", new {area = "admin", id = signup.ID}, new {@class="btn btn-default"})
+                                    </td>
                                 </tr>
                             }
                         </table>
