--- a/eMotive.Site/Areas/Admin/Views/Signups/EditSignup.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Signups/EditSignup.cshtml
@@ -24,7 +24,11 @@
 @section Scripts
 {
    
-<script src="~/Scripts/angular.min.js"></script>
-<script src="~/AngularJs/Services/SignupServices.js"></script> 
-<script src="~/AngularJs/Apps/SignupManagement/SignupManagementApp.js"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-sanitize.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.min.js"></script>
+    <script src="~/AngularJs/Services/SignupServices.js"></script>
+    <script src="~/AngularJs/Apps/SignupManagement/SignupManagementApp.js"></script>
 }
