--- a/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
@@ -56,6 +56,7 @@ else
                         <th>Group</th>
                         <th>Description</th>
                         <th>Date</th>
+                        <th>Sessions</th>
                         <th>Main</th>
                         <th>Reserve</th>
                         <th style="display: none;">Interested</th>
@@ -71,7 +72,8 @@ else
                     <tr>
                         <td>@signup.Group.Name</td>
                                     <td>@signup.Description</td>
-                                    <td>@signup.Date.ToString("dddd d MMMM yyyy")</td>
+                        <td>@signup.Date.ToString("dddd d MMMM yyyy")</td>
+                        <td>@signup.Slots.Count()</td>
                                     <td>
                                         @totalPlaces <!--(totalPlaces - signup.Slots.Sum(n => n.ApplicantsSignedUp != null ? (n.ApplicantsSignedUp.Count) : 0))  /-->
                                     </td>
@@ -82,7 +84,7 @@ else
                                     </td>
                                     <td>
                                         <!--Html.ActionLink("Details", "SignupDetails", "Signups", new {area = "admin", id = signup.ID}, new {class="btn btn-default"}) Html.ActionLink("Edit", "Edit", "Signups", new { area = "admin", id = signup.ID }, new { class = "btn btn-default" })-->
-                                        @Html.ActionLink("View", "ViewSignup", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
+                                        @Html.ActionLink("Details", "SignupDetails", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
                                         @Html.ActionLink("Edit", "EditSignup", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
                                     </td>
                                 </tr>
