Started creating settings section.

--- a/eMotive.Site/Areas/Admin/Views/Settings/Index.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Settings/Index.cshtml
@@ -15,7 +15,8 @@
 <div class="page-header">
     <h2>Settings</h2>
 </div>
-<p>This section allows you to administer settings for the site.</p>
-<a href="@Url.Action("Search")" class="btn">Search Settings</a>
 <div>
-<hr/></div>
+    <p>This section allows you to administer settings for the site.</p>
+    <a href="@Url.Action("Search")" class="btn">Search Settings</a> <a href="@Url.Action("Site")" class="btn">Site Settings</a> 
+    <hr />
+</div>
