--- a/eMotive.Site/Areas/Admin/Views/Shared/_AdminNav.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Shared/_AdminNav.cshtml
@@ -4,7 +4,7 @@
 			<div class="navbar navbar-fixed-top">
 				<div class="navbar-inner">
 					<div class="container">
-						 <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a class="brand" href="#">MMI Admin</a>
+						 <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a class="brand" href="#">@ViewBag.SiteName Admin</a>
                         <div class="nav-collapse collapse navbar-responsive-collapse">
                             <ul class="nav">
                                 <li class="divider-vertical"></li>
