--- a/eMotive.Site/Views/Shared/_Layout.cshtml
+++ b/eMotive.Site/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
         <title>@ViewBag.Title</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="Description" content="The University of Birmingham has been challenging and developing great minds for more than a century. Characterised by a tradition of innovation, research at the University has broken new ground, pushed forward the boundaries of knowledge and made an impact on people&#39;s lives." />
-        @Styles.Render("~/Content/Frameworks")
+        @{ Html.RenderAction("MetaTags", "Navigation", new { Area = "" }); }
+         @Styles.Render("~/Content/Frameworks")
         @Styles.Render("~/Content/ContensisCss/Styles")
     </head>
 <body>
@@ -63,19 +64,7 @@
     @Scripts.Render("~/Scripts/Frameworks")
     <script src="@Url.Action("js","Application", new {area = ""})" type="text/javascript"></script>
     @RenderSection("footer", false)
-    <script>
-        (function (i, s, o, g, r, a, m)
-        {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments);
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g;
-            m.parentNode.insertBefore(a, m);
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-45423815-1', 'bham.ac.uk');
-        ga('send', 'pageview');
-
-</script>
+    @{ Html.RenderAction("GoogleAnalyticsObject", "Navigation", new {Area = ""}); }
 </body>
 </html>
