Making changes to new settings, added form and sql code + validation.
All appears to be working correctly.

--- a/eMotive.Site/Areas/Admin/Views/Users/CreateInterviewer.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Users/CreateInterviewer.cshtml
@@ -41,6 +41,13 @@
                 @Html.TextBoxFor(model => model.Username, new { placeholder = "Username"})
             </div>
         </div>
+        
+        <div class="control-group">
+            <label class="control-label" for="ExaminationNumber">Examination Number</label>
+            <div class="controls">
+                @Html.TextBoxFor(model => model.ExaminationNumber, new { placeholder = "Examination Number" })
+            </div>
+        </div>
 
         <div class="control-group">
             <label class="control-label" for="Title">Title</label>
