--- a/eMotive.Site/Areas/Admin/Views/Users/EditUser.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Users/EditUser.cshtml
@@ -42,6 +42,13 @@
                 @Html.TextBoxFor(model => model.Username, new { placeholder = "Username", @readonly = "readonly" })
             </div>
         </div>
+        
+        <div class="control-group">
+            <label class="control-label" for="ExaminationNumber">Examination Number</label>
+            <div class="controls">
+                @Html.TextBoxFor(model => model.ExaminationNumber, new { placeholder = "Examination Number" })
+            </div>
+        </div>
 
         <div class="control-group">
             <label class="control-label" for="Title">Title</label>
@@ -49,7 +56,7 @@
                 @Html.TextBoxFor(model => model.Title, new { placeholder = "Title" })
             </div>
         </div>
-
+        
         <div class="control-group">
             <label class="control-label" for="Forename">Forename</label>
             <div class="controls">
