--- a/eMotive.Site/Views/Shared/_LayoutAdmin.cshtml
+++ b/eMotive.Site/Views/Shared/_LayoutAdmin.cshtml
@@ -8,7 +8,7 @@
     @{ Html.RenderAction("MetaTags", "Navigation", new { Area = "" }); }
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @Styles.Render("~/Content/bootstrap")
-
+    <script> var siteRoot = "@Url.Content("~")";</script>
 </head>
 <body>@{Html.RenderAction("Menu", "Navigation", new { area = "Admin" });}
     <div class="container-fluid" style="margin-top: 60px;">
