--- a/eMotive.Site/Areas/Admin/Views/Users/Index.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Users/Index.cshtml
@@ -228,8 +228,8 @@ else
 
 @section Scripts
 {
-<script src="~/Scripts/eMotive/UserActionsFunctions.js"></script>
-<script src="~/Scripts/eMotive/Closures/UserActions.js"></script>
+<script src="~/Scripts/eMotive/UserActionsFunctions.js?v=1"></script>
+<script src="~/Scripts/eMotive/Closures/UserActions.js?v=1"></script>
 
 
 }
