Cleaning up and sorting out new ModSlot pages

--- a/eMotive.Site/Areas/Admin/Views/Settings/Site.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Settings/Site.cshtml
@@ -82,6 +82,15 @@
 
     <div class="control-group">
         <div class="controls">
+            <label class="checkbox">
+                @Html.CheckBoxFor(m => m.AllowWithdrawals)
+                Allow withdrawals
+            </label>
+        </div>
+    </div>
+
+    <div class="control-group">
+        <div class="controls">
             <button type="submit" class="btn btn-info">Save</button>
             <a href="@Url.Action("Index")" class="btn">Cancel</a>
         </div>
