--- a/eMotive.Site/Areas/Admin/Views/Shared/_tinymceEditor.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Shared/_tinymceEditor.cshtml
@@ -12,6 +12,7 @@
             mode: "specific_textareas",
             editor_selector: "tinymce",
             encoding: "xml",
+            forced_root_block: false,
             setup: function (editor)
             {
                 editor.on('SaveContent', function (e)
