--- a/eMotive.Site/Areas/Admin/Views/Shared/_tinymceEditorMinimal.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Shared/_tinymceEditorMinimal.cshtml
@@ -12,6 +12,7 @@
             menubar: false,
             mode: "specific_textareas",
             editor_selector: "tinymce",
+            forced_root_block: false,
             encoding: "xml",
             setup: function (editor) {
                 editor.on('SaveContent', function(e) {
