--- a/eMotive.Site/Areas/Admin/Views/Signups/EditSignup.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Signups/EditSignup.cshtml
@@ -70,6 +70,7 @@
                         </select>        
                     </td>
                 </tr>
+                <tr><th>Closed</th><td><input type="checkbox" ng-model="signup.Closed" /></td></tr>
             </tbody>
         </table>
 
