--- a/eMotive.Site/Views/Applicant/Index.cshtml
+++ b/eMotive.Site/Views/Applicant/Index.cshtml
@@ -25,7 +25,7 @@
 {
 <div class ="row">
     <div class="span4 offset2">
-        <a href="@Url.Action("Signups", "Interviews")" role="button" class="btn btn-info" id="SlotSignup">@Model.ButtonText</a>
+        <a href="@Url.Action("Signups", "Interviews")" role="button" class="btn btn-info" id="SlotSignup">You have not signed up to an interview date. Click here to do so.</a>
     </div>
 </div>
 }
