--- a/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
+++ b/eMotive.Site/Areas/Admin/Views/Signups/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using eMotive.SCE.Common.Helpers
+﻿@using System.Linq
+@using eMotive.SCE.Common.Helpers
 @using Extensions
 @using eMotive.Models.Objects.SignupsMod
 @model SignupSearch
@@ -53,6 +54,7 @@ else
             <table class="table table-striped table-hover table-bordered">
                 <thead>
                     <tr>
+                        <th></th>
                         <th>Group</th>
                         <th>Description</th>
                         <th>Date</th>
@@ -64,30 +66,37 @@ else
                         <th></th>
                     </tr>
                 </thead>
-                @foreach (var signup in Model.Signups)
+                @foreach (var signup in Model.Signups.OrderBy(n => n.Date))
                 {
                     var totalPlaces = signup.Slots.Sum(n => n.PlacesAvailable);
                     var totalReserve = signup.Slots.Sum(n => n.ReservePlaces);
                    // var TotalInterested = signup.Slots.Sum(n => n.InterestedPlaces);
-                    <tr>
+                
+                    <tr @if(signup.Closed){ <text>class="error"</text> }>
+                        <td>
+                            @if (signup.Closed)
+                            {
+                                <text><span class="label label-important">Closed</span></text>
+                            }
+                        </td>
                         <td>@signup.Group.Name</td>
-                                    <td>@signup.Description</td>
+                        <td>@signup.Description</td>
                         <td>@signup.Date.ToString("dddd d MMMM yyyy")</td>
                         <td>@signup.Slots.Count()</td>
-                                    <td>
-                                        @totalPlaces <!--(totalPlaces - signup.Slots.Sum(n => n.ApplicantsSignedUp != null ? (n.ApplicantsSignedUp.Count) : 0))  /-->
-                                    </td>
-                                    <td>@totalReserve</td>
-                                    <td style="display: none;">@totalReserve</td>
-                                    <td>
-                                        @((totalPlaces  + totalReserve) - signup.Slots.Sum(n => n.NumberSignedUp()))  / @(totalPlaces  + totalReserve)
-                                    </td>
-                                    <td>
-                                        <!--Html.ActionLink("Details", "SignupDetails", "Signups", new {area = "admin", id = signup.ID}, new {class="btn btn-default"}) Html.ActionLink("Edit", "Edit", "Signups", new { area = "admin", id = signup.ID }, new { class = "btn btn-default" })-->
-                                        @Html.ActionLink("Details", "SignupDetails", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
-                                        @Html.ActionLink("Edit", "EditSignup", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
-                                    </td>
-                                </tr>
+                        <td>
+                            @totalPlaces <!--(totalPlaces - signup.Slots.Sum(n => n.ApplicantsSignedUp != null ? (n.ApplicantsSignedUp.Count) : 0))  /-->
+                        </td>
+                        <td>@totalReserve</td>
+                        <td style="display: none;">@totalReserve</td>
+                        <td>
+                            @((totalPlaces  + totalReserve) - signup.Slots.Sum(n => n.NumberSignedUp()))  / @(totalPlaces  + totalReserve)
+                        </td>
+                        <td>
+                            <!--Html.ActionLink("Details", "SignupDetails", "Signups", new {area = "admin", id = signup.ID}, new {class="btn btn-default"}) Html.ActionLink("Edit", "Edit", "Signups", new { area = "admin", id = signup.ID }, new { class = "btn btn-default" })-->
+                            @Html.ActionLink("Details", "SignupDetails", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Edit", "EditSignup", "Signups", new { area = "admin", id = signup.Id }, new { @class = "btn btn-default" })
+                        </td>
+                    </tr>
                 }
             </table>
             @Html.PageLinks(Model, i => Url.Action("Index", new { page = i }), !string.IsNullOrEmpty(Model.SelectedGroupFilter) && Model.SelectedGroupFilter != "0" ? string.Format("SelectedGroupFilter={0}", Model.SelectedGroupFilter) : string.Empty)
