--- a/eMotive.Site/Views/Interviews/Signups.cshtml
+++ b/eMotive.Site/Views/Interviews/Signups.cshtml
@@ -86,9 +86,13 @@ else
         @foreach (var item in Model.GetSignupsByGroup())
         {
             <div class="tab-pane" id="@item.Key.Replace(' ', '_')">
-                <div class="alert-info alert">
-                    @Html.Raw(Server.HtmlDecode(Model.GetDescription(item.Key)))
-                </div>
+                
+                @if (!string.IsNullOrEmpty(Model.GetDescription(item.Key)))
+                {
+                    <div class="alert-info alert">
+                        @Html.Raw(Server.HtmlDecode(Model.GetDescription(item.Key)))
+                    </div>
+                }
                 <table class="table table-striped table-hover">
                     <tbody>
                         @foreach (var signup in item.Value)
@@ -101,7 +105,7 @@ else
                                         <span class="label label-success">Signed Up</span>
                                         foreach (var type in signup.SignupTypes)
                                         {
-                                             <span class="label label-success">@type</span>
+                                            <span class="label label-success">@type</span>
                                         }
                                     }
                                     else
